--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,17 +53,18 @@ dependencies {
     implementation 'com.jaeger.statusbarutil:library:1.5.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
 
-    // Jitsi Meet  视频
-    implementation ('org.jitsi.react:jitsi-meet-sdk:2.1.0') { transitive = true }
+    implementation ('org.jitsi.react:jitsi-meet-sdk:+') { transitive = true }
 
-    // Glide
-    implementation ('com.github.bumptech.glide:glide:4.7.1'){
-        exclude group: "com.android.support", module: "glide"
-    }
-    implementation("com.github.bumptech.glide:annotations:4.7.1") {
-        exclude group: "com.android.support", module: "annotations"
-    }
-
+//    // Jitsi Meet  视频
+//    implementation ('org.jitsi.react:jitsi-meet-sdk:2.1.0') { transitive = true }
+//
+//    // Glide
+//    implementation ('com.github.bumptech.glide:glide:4.7.1'){
+//        exclude group: "com.android.support", module: "glide"
+//    }
+//    implementation("com.github.bumptech.glide:annotations:4.7.1") {
+//        exclude group: "com.android.support", module: "annotations"
+//    }
 
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     // Anko Layouts
