--- a/build.gradle
+++ b/build.gradle
@@ -20,15 +20,16 @@ buildscript {
 
 allprojects {
     repositories {
+        maven { url "file:/tmp/repo" }
         google()
         jcenter()
         mavenCentral()
         maven { url 'https://jitpack.io' }
         maven { url 'https://dl.bintray.com/umsdk/release' }
         maven {url  "http://dl.bintray.com/piasy/maven" }
-        maven {
-            url "https://github.com/jitsi/jitsi-maven-repository/raw/master/releases"
-        }
+//        maven {
+//            url "https://github.com/jitsi/jitsi-maven-repository/raw/master/releases"
+//        }
     }
 }
 
