--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,8 +32,20 @@
                  android:theme="@style/AppTheme">
 
 
+        <!--<activity-->
+                <!--android:name="com.example.sk_android.mvp.view.activity.jobselect.RecruitInfoShowActivity"-->
+                <!--android:label="@string/app_name"-->
+                <!--android:windowSoftInputMode="adjustPan"-->
+                <!--android:theme="@style/AppTheme.ActionBar">-->
+            <!--<intent-filter>-->
+                <!--<action android:name="android.intent.action.MAIN"/>-->
+                <!--<category android:name="android.intent.category.LAUNCHER"/>-->
+            <!--</intent-filter>-->
+        <!--</activity>-->
+
+
         <activity
-                android:name="com.example.sk_android.mvp.view.activity.jobselect.RecruitInfoShowActivity"
+                android:name="com.example.sk_android.mvp.view.activity.message.MessageChatWithoutLoginActivity"
                 android:label="@string/app_name"
                 android:windowSoftInputMode="adjustPan"
                 android:theme="@style/AppTheme.ActionBar">
@@ -43,16 +55,15 @@
             </intent-filter>
         </activity>
 
-
         <!--<activity-->
-                <!--android:name="com.example.sk_android.mvp.view.activity.message.MessageChatWithoutLoginActivity"-->
-                <!--android:label="@string/app_name"-->
-                <!--android:windowSoftInputMode="adjustPan"-->
-                <!--android:theme="@style/AppTheme.ActionBar">-->
-            <!--<intent-filter>-->
-                <!--<action android:name="android.intent.action.MAIN"/>-->
-                <!--<category android:name="android.intent.category.LAUNCHER"/>-->
-            <!--</intent-filter>-->
+        <!--android:name="imui.jiguang.cn.imuisample.messages.MainActivity"-->
+        <!--android:label="@string/app_name"-->
+        <!--android:windowSoftInputMode="adjustPan"-->
+        <!--android:theme="@style/AppTheme.ActionBar">-->
+        <!--<intent-filter>-->
+        <!--<action android:name="android.intent.action.MAIN"/>-->
+        <!--<category android:name="android.intent.category.LAUNCHER"/>-->
+        <!--</intent-filter>-->
         <!--</activity>-->
 
         <!--主聊天界面-->
