--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,7 @@ buildscript {
 
 allprojects {
     repositories {
-        maven { url "file:/tmp/repo" }
+        maven { url "file:/home/zjh/jitsi_repository" }
         google()
         jcenter()
         mavenCentral()
