--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,7 +33,7 @@
 
 
         <activity
-                android:name=".mvp.view.activity.register.PersonInformationFourActivity"
+                android:name=".mvp.view.activity.register.testActivity"
                 android:label="@string/app_name"
                 android:windowSoftInputMode="adjustPan"
                 android:theme="@style/AppTheme.ActionBar">
@@ -60,6 +60,9 @@
                   android:theme="@style/AppTheme.ActionBar">
         </activity>
 
+        <activity android:name=".mvp.view.activity.register.ImproveInformationActivity"
+                  android:theme="@style/AppTheme.ActionBar">
+        </activity>
         <activity android:name=".mvp.view.activity.register.TelephoneResetPasswordActivity"
                   android:theme="@style/AppTheme.ActionBar">
         </activity>
@@ -84,8 +87,8 @@
         <activity android:name=".mvp.view.activity.register.SetPasswordActivity"
                   android:theme="@style/AppTheme.ActionBar">
         </activity>
-        <activity android:name=".mvp.view.activity.register.ImproveInformationActivity"
-
+        <activity android:name=".mvp.view.activity.register.PersonInformationFourActivity"
+                  android:windowSoftInputMode="adjustPan" >
                   android:theme="@style/AppTheme.ActionBar">
         </activity>
         <activity android:name=".mvp.view.activity.register.MainActivity"
@@ -95,6 +98,12 @@
                   android:theme="@style/AppTheme.ActionBar">
         </activity>
         <activity android:name=".mvp.view.activity.register.PersonInformationThreeActivity"
+                  android:theme="@style/AppTheme.ActionBar">
+        </activity>
+        <activity android:name=".mvp.view.activity.jobselect.RecruitInfoShowActivity"
+                  android:theme="@style/AppTheme.ActionBar">
+        </activity>
+        <activity android:name=".mvp.view.activity.person.PersonSetActivity"
                   android:theme="@style/AppTheme.ActionBar">
         </activity>
 
