--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,6 +45,21 @@
         </activity>
 
 
+        <!--判定首页页面-->
+        <activity android:name=".mvp.view.activity.register.MainActivity"
+                  android:theme="@style/AppTheme.ActionBar">
+        </activity>
+
+        <!--注册成功登录页面-->
+        <activity android:name=".mvp.view.activity.register.RegisterLoginActivity"
+                  android:theme="@style/AppTheme.ActionBar">
+        </activity>
+
+        <!--app页面首页-->
+        <activity android:name=".mvp.view.activity.jobselect.RecruitInfoShowActivity"
+                  android:theme="@style/AppTheme.ActionBar">
+        </activity>
+
         <!--期望职位选择-->
         <activity android:name=".mvp.view.activity.jobselect.JobSelectActivity"
                   android:theme="@style/AppTheme.ActionBar">
@@ -57,6 +72,7 @@
         <activity android:name=".mvp.view.activity.register.ImproveInformationActivity"
                   android:theme="@style/AppTheme.ActionBar">
         </activity>
+
         <activity android:name=".mvp.view.activity.register.TelephoneResetPasswordActivity"
                   android:theme="@style/AppTheme.ActionBar">
         </activity>
@@ -95,6 +111,11 @@
                   android:theme="@style/AppTheme.ActionBar">
         </activity>
 
+        <!--重置密码-验证码页面-->
+        <activity android:name=".mvp.view.activity.register.SetPasswordVerifyActivity"
+                  android:theme="@style/AppTheme.ActionBar">
+        </activity>
+
 
 
         <activity android:name=".mvp.view.activity.person.PersonSetActivity"
@@ -108,6 +129,11 @@
 
         <!--简历页面，发送简历页面-->
         <activity android:name=".mvp.view.activity.resume.SendResumeActivity"
+                  android:theme="@style/AppTheme.ActionBar">
+        </activity>
+
+        <!--app协议页面 -->
+        <activity android:name=".mvp.view.activity.register.MemberTreatyActivity"
                   android:theme="@style/AppTheme.ActionBar">
         </activity>
 
@@ -198,7 +224,7 @@
                 android:value="750" /> // 设计图的宽,单位是像素,推荐用markman测量,量出来如果是750px那么请尽量去找ui设计师要一份android的设计图.
         <meta-data
                 android:name="designdpi"
-                android:value="280" /> //设计图对应的标准dpi,根据下面的那张图找到对应的dpi,比如1080就对应480dpi,如果拿到的是其他宽度的设计图,那么选择一个相近的dpi就好了
+                android:value="285" /> //设计图对应的标准dpi,根据下面的那张图找到对应的dpi,比如1080就对应480dpi,如果拿到的是其他宽度的设计图,那么选择一个相近的dpi就好了
         <meta-data
                 android:name="fontsize"
                 android:value="1.0" /> //全局字体的大小倍数,有时候老板会觉得你的所有的字小了或者大了,你总不能一个一个去改吧
