--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
 
 
         <activity
-                android:name="com.example.sk_android.mvp.view.activity.register.testActivity"
+                android:name=".mvp.view.activity.jobselect.RecruitInfoShowActivity"
                 android:label="@string/app_name"
                 android:windowSoftInputMode="adjustPan"
                 android:theme="@style/AppTheme.ActionBar">
@@ -54,10 +54,11 @@
                   android:theme="@style/AppTheme.ActionBar">
         </activity>
 
-        <!--app页面首页-->
-        <activity android:name=".mvp.view.activity.jobselect.RecruitInfoShowActivity"
-                  android:theme="@style/AppTheme.ActionBar">
-        </activity>
+
+        <!--&lt;!&ndash;app页面首页&ndash;&gt;-->
+        <!--<activity android:name=".mvp.view.activity.jobselect.RecruitInfoShowActivity"-->
+                  <!--android:theme="@style/AppTheme.ActionBar">-->
+        <!--</activity>-->
 
         <!--期望职位选择-->
         <activity android:name=".mvp.view.activity.jobselect.JobSelectActivity"
