--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
 
 
         <activity
-                android:name="com.example.sk_android.mvp.view.activity.register.testActivity"
+                android:name="com.example.sk_android.mvp.view.activity.company.CompanyInfoShowActivity"
                 android:label="@string/app_name"
                 android:windowSoftInputMode="adjustPan"
                 android:theme="@style/AppTheme.ActionBar">
@@ -137,9 +137,9 @@
         </activity>
 
         <!-- 在线简历编辑页面-->
-        <activity android:name="com.example.sk_android.mvp.view.activity.onlineresume.ResumeEdit"
-                  android:theme="@style/AppTheme.ActionBar">
-        </activity>
+        <!--<activity android:name="com.example.sk_android.mvp.view.activity.onlineresume.ResumeEdit"-->
+                  <!--android:theme="@style/AppTheme.ActionBar">-->
+        <!--</activity>-->
 
         <!-- 附件简历列表页面 -->
         <activity android:name="com.example.sk_android.mvp.view.activity.resume.ResumeListActivity"
@@ -165,9 +165,9 @@
 
 
         <!--公司信息列表-->
-        <activity android:name="com.example.sk_android.mvp.view.activity.company.CompanyInfoShowActivity"
-                  android:theme="@style/AppTheme.ActionBar">
-        </activity>
+        <!--<activity android:name="com.example.sk_android.mvp.view.activity.company.CompanyInfoShowActivity"-->
+                  <!--android:theme="@style/AppTheme.ActionBar">-->
+        <!--</activity>-->
 
 
         <!-- 职位(招聘信息)搜索-->
