--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
 
 
         <activity
-                android:name=".mvp.view.activity.jobselect.RecruitInfoShowActivity"
+                android:name=".mvp.view.activity.register.MainActivity"
                 android:label="@string/app_name"
                 android:windowSoftInputMode="adjustPan"
                 android:theme="@style/AppTheme.ActionBar">
@@ -45,9 +45,9 @@
 
 
         <!--判定首页页面-->
-        <activity android:name=".mvp.view.activity.register.MainActivity"
-                  android:theme="@style/AppTheme.ActionBar">
-        </activity>
+        <!--<activity android:name=".mvp.view.activity.register.MainActivity"-->
+                  <!--android:theme="@style/AppTheme.ActionBar">-->
+        <!--</activity>-->
 
         <!--注册成功登录页面-->
         <activity android:name=".mvp.view.activity.register.RegisterLoginActivity"
@@ -55,10 +55,10 @@
         </activity>
 
 
-        <!--&lt;!&ndash;app页面首页&ndash;&gt;-->
-        <!--<activity android:name=".mvp.view.activity.jobselect.RecruitInfoShowActivity"-->
-                  <!--android:theme="@style/AppTheme.ActionBar">-->
-        <!--</activity>-->
+        <!--app页面首页-->
+        <activity android:name=".mvp.view.activity.jobselect.RecruitInfoShowActivity"
+                  android:theme="@style/AppTheme.ActionBar">
+        </activity>
 
         <!--期望职位选择-->
         <activity android:name=".mvp.view.activity.jobselect.JobSelectActivity"
@@ -138,9 +138,9 @@
         </activity>
 
         <!-- 在线简历编辑页面-->
-        <activity android:name="com.example.sk_android.mvp.view.activity.onlineresume.ResumeEdit"
-                  android:theme="@style/AppTheme.ActionBar">
-        </activity>
+        <!--<activity android:name="com.example.sk_android.mvp.view.activity.onlineresume.ResumeEdit"-->
+                  <!--android:theme="@style/AppTheme.ActionBar">-->
+        <!--</activity>-->
 
         <!-- 附件简历列表页面 -->
         <activity android:name="com.example.sk_android.mvp.view.activity.resume.ResumeListActivity"
