--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
 
 
         <activity
-                android:name="com.example.sk_android.mvp.view.activity.person.PersonSetActivity"
+                android:name="com.example.sk_android.mvp.view.activity.jobselect.CitySelectActivity"
                 android:label="@string/app_name"
                 android:windowSoftInputMode="adjustPan"
                 android:theme="@style/AppTheme.ActionBar">
@@ -107,9 +107,9 @@
 
 
 
-        <!--<activity android:name=".mvp.view.activity.person.PersonSetActivity"-->
-                  <!--android:theme="@style/AppTheme.ActionBar">-->
-        <!--</activity>-->
+        <activity android:name=".mvp.view.activity.person.PersonSetActivity"
+                  android:theme="@style/AppTheme.ActionBar">
+        </activity> 
 
         <!--个人中心，基础信息-->
         <activity android:name=".mvp.view.activity.person.PersonInformation"
