--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
 
 
         <activity
-                android:name="com.example.sk_android.mvp.view.activity.videointerview.SeeOffer"
+                android:name="com.example.sk_android.mvp.view.activity.register.MainActivity"
                 android:label="@string/app_name"
                 android:windowSoftInputMode="adjustPan"
                 android:theme="@style/AppTheme.ActionBar">
@@ -31,6 +31,13 @@
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
+        </activity>
+
+
+        <!--offer详情-->
+        <activity android:name="com.example.sk_android.mvp.view.activity.videointerview.SeeOffer"
+                  android:windowSoftInputMode="adjustPan"
+                  android:theme="@style/AppTheme.ActionBar">
         </activity>
 
         <!--主聊天界面-->
